--- a/playbooks/install_satellite.yml
+++ b/playbooks/install_satellite.yml
@@ -10,4 +10,4 @@
       include_vars:
         file: "{{ vars_file }}"
   roles:
-    - jjaswanson4.install_satellite.install_satellite
+    - install_satellite
