--- a/playbooks/roles/install_satellite/tasks/configure-repositories.yml
+++ b/playbooks/roles/install_satellite/tasks/configure-repositories.yml
@@ -4,8 +4,8 @@
   set_fact:
     install_repos: "{{ common_repos + satellite_repos + maintenance_repos }}"
   when:
-    - "'satellite' in group_names"
-    - satellite.version != 'beta'
+          #    - "'satellite' in group_names"
+          #    - satellite.version != 'beta'
 
 - name: set repos for satellite beta
   set_fact:
